--- a/blocks/cards-carousel/cards-carousel.css
+++ b/blocks/cards-carousel/cards-carousel.css
@@ -1,7 +1,7 @@
 .cards-carousel {
     position: relative;
     display: flex;
-    gap: 30px;
+    gap: 26px;
     margin: 60px auto;
     background-color: #fff;
     max-width: 1000px;
@@ -18,8 +18,9 @@
         flex-direction: row;
         border-radius: 20px;
         padding: 15px 15px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-       
+        /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+        box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.19);
+        margin: 4px;
 
         a:any-link, .button:any-link {
             text-decoration: none;
