--- a/blocks/tiles/tiles.css
+++ b/blocks/tiles/tiles.css
@@ -2,18 +2,18 @@
 .tiles{
     display: flex;
     flex-wrap: wrap;
-    row-gap: 54px;
+    row-gap: 36px;
     
     div {
         box-sizing: border-box;
         flex: 1 1 100%;
-        padding: 0 16px;
+        padding: 0;
 
         div{
             display: flex;
             flex-direction: row;
             gap: 24px;
-            padding: 0 16px;
+            padding: 0 12px;
         }
         *{ font-size: 15px;}
     }
@@ -47,8 +47,13 @@
 }
 @media (min-width: 724px) and (max-width: 1023px){
     .tiles{
+        row-gap: 54px;
         div {
             flex: 1 1 50%;
+            padding: 0 16px;
+            div {
+                padding: 0 16px;
+            }
         }
         img {
             width: 50px;
@@ -59,8 +64,13 @@
 }
 @media (min-width: 1024px) {
     .tiles{
+        row-gap: 54px;
         div {
             flex: 1 1 33.3%;
+            padding: 0 16px;
+            div {
+                padding: 0 16px;
+            }
         }
     }
 }
